fixed comments, whitespace, hide-on-click for KDView tooltips

--- a/client/stylus/app.activity.styl
+++ b/client/stylus/app.activity.styl
@@ -2405,6 +2405,7 @@ div.tooltip-container
   &.avatar-tooltip
     max-width 450px
     .tooltip-wrapper
+      padding 5px
       div.rightcol
         margin-left 90px
         .profile-name
@@ -2442,7 +2443,7 @@ div.tooltip-container
             font-weight         700
             line-height         17px
             display             inline-block
-            margin              0 30px 0 0
+            margin              0 10px 0 0
             min-width           80px
           .fing
             a
